# fast-api-starter-kit

./: README.md  cookiecutter.json
{{cookiecutter.git_repo_name}}/: .gitignore  README.md  alembic.ini  local.ini  pyproject.toml  settings.toml
{{cookiecutter.git_repo_name}}/alembic/: env.py
{{cookiecutter.git_repo_name}}/scripts/: example_script.py
{{cookiecutter.git_repo_name}}/src/: main.py
{{cookiecutter.git_repo_name}}/src/api/: JWTBearer.py  deps.py
{{cookiecutter.git_repo_name}}/src/api/api_v1/: api.py
{{cookiecutter.git_repo_name}}/src/api/api_v1/endpoints/: users.py
{{cookiecutter.git_repo_name}}/src/core/: __init__.py  logging.py  script.py  settings.py  slack_connector.py  utils.py
{{cookiecutter.git_repo_name}}/src/orm/: enums.py  models.py  session.py
{{cookiecutter.git_repo_name}}/src/orm/schemas/: __init__.py  db_base.py  user.py
{{cookiecutter.git_repo_name}}/src/services/crud/: base_crud.py  user_crud.py
{{cookiecutter.git_repo_name}}/tests/: conftest.py
{{cookiecutter.git_repo_name}}/tests/api/api_v1/: test_users.py
