[tool.poetry]
name = "{{cookiecutter.git_repo_name}}"
version = "0.1.0"
description = ""
authors = [""]
packages = [
     { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
python-dotenv = "^0.14.0"
uvicorn = "^0.12.2"
alembic = "^1.4.3"
SQLAlchemy = "^1.3.20"
python-jose = {version = "^3.2.0", extras = ["cryptography"]}
requests = "^2.24.0"
pydantic = {version = "^1.6.1", extras = ["email"]}
PyMySQL = "^0.10.1"
slackclient = "^2.9.3"
dateparser = "^0.7.6"
mangum = "^0.10.0"
sentry-sdk = "^0.19.5"
pendulum = "^2.1.2"
tomlkit = "^0.7.0"
python-box = "^5.3.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.16.3"
coverage = "^5.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
